--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.294.0",
     "next": "13.5.6",
     "react": "^18",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "recharts": "^2.10.2",
     "tailwind-merge": "^2.0.0",
